--- a/_dist/index.html
+++ b/_dist/index.html
@@ -170,7 +170,7 @@
 					</div>
 				</div>
 				<div class="block-2">
-					<div class="container" max-width="1360px">
+					<div class="container">
 						<div class="block-content mx-at">
 							<h3 class="ta-c wow fadeInDown" data-wow-delay=".2s">HỘI TỤ NỘI LỰC SINH LỜI NHANH</h3>
 							<div class="list-content">
@@ -224,6 +224,8 @@
 									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/background/index-4-1.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-2 map-index-4-slider" id="map-index-4-slider-2">
@@ -239,6 +241,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-3 map-index-4-slider" id="map-index-4-slider-3">
@@ -254,6 +258,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/2.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-4 map-index-4-slider" id="map-index-4-slider-4">
@@ -269,6 +275,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/3.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-5 map-index-4-slider" id="map-index-4-slider-5">
@@ -284,6 +292,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-6 map-index-4-slider" id="map-index-4-slider-6">
@@ -299,6 +309,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/1.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="map-index-4-slider-7 map-index-4-slider" id="map-index-4-slider-7">
@@ -314,6 +326,8 @@
 									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/images/index-4/4.jpg" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 					</div>
@@ -434,6 +448,8 @@
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="matbang-slider" id="matbang-2">
@@ -445,6 +461,8 @@
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 						<div class="matbang-slider" id="matbang-3">
@@ -456,6 +474,8 @@
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 									<div class="swiper-slide"><img src="./assets/matbang/1.png" alt=""></div>
 								</div>
+								<div class="map-index-4-slider-prev-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
+								<div class="map-index-4-slider-next-mobile"><svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg></div>
 							</div>
 						</div>
 					</div>
@@ -589,7 +609,7 @@
 				</div>
 			</section>
 			<section class="index-8" data-scroll-id="5" data-bg="./assets/images/background/index-8.jpg">
-				<div class="container" max-width="1360px">
+				<div class="container">
 					<div class="block-content mx-at">
 						<div class="content ta-c">
 							<div class="block-title mx-at" max-width="600px">
@@ -822,7 +842,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="index-11" data-scroll-id="8">
+				<section class="index-11">
 					<div class="container" max-width="1360px">
 						<div class="block-title mx-at ta-c" max-width="75%" no-after></div>
 						<div class="row">
@@ -846,7 +866,7 @@
 									<div class="title">ĐĂNG KÝ NHẬN TIN</div>
 									<div class="desc">Vui lòng điền vào form dưới đây để nhận toàn bộ thông tin, các chính sách, tài liệu dự án hoặc để chúng tôi tư vấn cho bạn.</div>
 								</div>
-								<div class="block-form">
+								<div class="block-form" data-scroll-id="8">
 									<form action="#">
 										<div class="input-group">
 											<input class="form-control" type="text" placeholder="Name" name="Name"><span class="field-validate-error">Error</span>
