--- a/_dist/index.html
+++ b/_dist/index.html
@@ -493,9 +493,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="block-2" data-bg="./assets/images/background/index-6-block-2.jpg">
+				<div class="block-2" data-bg="./assets/images/background/index-6-block-2.jpg" data-bg-multiply>
 					<div class="container h-100">
-						<div class="block-content h-100 mx-at" max-width="1088px" data-bg-multiply>
+						<div class="block-content h-100 mx-at" max-width="1088px">
 							<div class="content ta-c">
 								<div class="price">
 									<h4>giá công khai chỉ từ</h4>
