--- a/_dist/index.html
+++ b/_dist/index.html
@@ -8,6 +8,16 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./css/core.min.css">
 		<link rel="stylesheet" href="./css/main.min.css">
+		<script>
+			// Dán mã này trong <head> của trang ở vị trí cao nhất có thể:
+			// <!-- Google Tag Manager -->
+			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-TR6C85F');
+			// <!-- End Google Tag Manager -->
+		</script>
 	</head>
 	<body>
 		<div id="loading-container">
@@ -878,7 +888,7 @@
 											<input class="form-control" type="text" placeholder="Phone" name="Phone"><span class="field-validate-error">Error</span>
 										</div>
 										<div class="submit">
-											<button data-url="/test">gửi</button>
+											<button data-url="/test" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;gui-bao-gia&gt;,'event_label': &lt;send&gt;,'value': &lt;0&gt;});">gửi</button>
 										</div>
 									</form>
 								</div>
@@ -890,20 +900,20 @@
 			<div class="index-page" id="js-page-verify" hidden></div>
 		</main>
 		<div class="fixed-menu">
-			<div class="block-item"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
+			<div class="block-item" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;view360&gt;,'event_label': &lt;01&gt;, 'value': &lt;0&gt;});"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
 					<div class="item css-selector">
 						<div class="icon"><img src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
 						<div class="text-hover">
 							<h5>VIEW 360<sup>o</sup></h5>
 						</div>
 					</div></a></div>
-			<div class="block-item" type="text">
+			<div class="block-item" type="text" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;nhan-bao-gia&gt;,'event_label': &lt;nhanbaogia&gt;,'value': &lt;0&gt;});">
 				<div class="item" data-scroll-to="8">
 					<div class="text">NHẬN BÁO GIÁ</div>
 					<div class="icon"><img src="./assets/icons/quotation.svg" alt="PHONE"></div>
 				</div>
 			</div>
-			<div class="block-item">
+			<div class="block-item" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;hotline&gt;,event_label': &lt;goihotline&gt;,'value': &lt;0&gt;});">
 				<div class="item css-selector"><a href="tel:0938188329">
 						<div class="icon"><img src="./assets/icons/phone.svg" alt="PHONE"></div>
 						<div class="text-hover">
@@ -926,5 +936,38 @@
 		<script type="text/javascript" src="./js/core.min.js"></script>
 		<script type="text/javascript" src="./js/main.min.js"></script>
 		<script src="./js/YoutubeController.min.js"></script>
+		<script>
+			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
+			//- <!-- Google Tag Manager (noscript) -->
+			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <!-- End Google Tag Manager (noscript) -->
+		</script>
+		<script>
+			//- Number 1
+			gtag('event', <click>, {
+			'event_category': <hotline>,
+			'event_label': <goihotline>,
+			'value': <0>
+			});
+			//- Number 2
+			gtag('event', <click>, {
+			'event_category': <view360>,
+			'event_label': <01>,
+			'value': <0>
+			});
+			//- Number 3
+			gtag('event', <click>, {
+			'event_category': <gui-bao-gia>,
+			'event_label': <send>,
+			'value': <0>
+			});
+			//- Number 4
+			gtag('event', <click>, {
+			'event_category': <nhan-bao-gia>,
+			'event_label': <nhanbaogia>,
+			'value': <0>
+			});
+		</script>
 	</body>
 </html>
