--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -177,31 +177,6 @@
 			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			//- <!-- End Google Tag Manager (noscript) -->
 		</script>
-		<script>
-			//- Number 1
-			gtag('event', <click>, {
-			'event_category': <hotline>,
-			'event_label': <goihotline>,
-			'value': <0>
-			});
-			//- Number 2
-			gtag('event', <click>, {
-			'event_category': <view360>,
-			'event_label': <01>,
-			'value': <0>
-			});
-			//- Number 3
-			gtag('event', <click>, {
-			'event_category': <gui-bao-gia>,
-			'event_label': <send>,
-			'value': <0>
-			});
-			//- Number 4
-			gtag('event', <click>, {
-			'event_category': <nhan-bao-gia>,
-			'event_label': <nhanbaogia>,
-			'value': <0>
-			});
-		</script>
+		<script></script>
 	</body>
 </html>
