--- a/_dist/index.html
+++ b/_dist/index.html
@@ -20,6 +20,12 @@
 		</script>
 	</head>
 	<body>
+		<script>
+			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
+			//- <!-- Google Tag Manager (noscript) -->
+			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <!-- End Google Tag Manager (noscript) -->
+		</script>
 		<div id="loading-container">
 			<div class="loading-wrapper"></div>
 		</div>
@@ -585,7 +591,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="button"><a class="btn btn-close" data-bg="./assets/images/background/btn-submit__2.png">Đăng ký ngay</a></div>
+						<div class="button"><a class="btn btn-close" data-scroll-to="8" data-bg="./assets/images/background/btn-submit__2.png">Đăng ký ngay</a></div>
 					</div>
 				</div>
 			</section>
@@ -863,8 +869,7 @@
 										<div class="item">Add: Tỉnh lộ 822, Ấp Chánh, xã Tân Mỹ, huyện Đức Hòa, tỉnh Long An.</div>
 										<div class="item">Phone: 0938 188 329</div>
 										<div class="item">Email: contact.trananhgroup@gmail.com</div>
-										<div class="item">
-											Facebook:<a class="lcl lcl-1" target="_blank" href="https://www.facebook.com/trananhgroupwestlakesgolfvillas">https://www.facebook.com/trananhgroupwestlakesgolfvillas</a></div>
+										<div class="item"><a class="lcl lcl-1" target="_blank" href="https://www.facebook.com/trananhgroupwestlakesgolfvillas"><img src="./assets/icons/facebook.png" alt=""></a></div>
 									</div>
 								</div>
 								<div class="block-map">
@@ -936,13 +941,5 @@
 		<script type="text/javascript" src="./js/core.min.js"></script>
 		<script type="text/javascript" src="./js/main.min.js"></script>
 		<script src="./js/YoutubeController.min.js"></script>
-		<script>
-			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
-			//- <!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F"
-			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-			//- <!-- End Google Tag Manager (noscript) -->
-		</script>
-		<script></script>
 	</body>
 </html>
