--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -20,6 +20,12 @@
 		</script>
 	</head>
 	<body>
+		<script>
+			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
+			//- <!-- Google Tag Manager (noscript) -->
+			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <!-- End Google Tag Manager (noscript) -->
+		</script>
 		<div id="loading-container">
 			<div class="loading-wrapper"></div>
 		</div>
@@ -170,13 +176,5 @@
 		<script type="text/javascript" src="./js/core.min.js"></script>
 		<script type="text/javascript" src="./js/main.min.js"></script>
 		<script src="./js/YoutubeController.min.js"></script>
-		<script>
-			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
-			//- <!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F"
-			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-			//- <!-- End Google Tag Manager (noscript) -->
-		</script>
-		<script></script>
 	</body>
 </html>
