--- a/_dist/index.html
+++ b/_dist/index.html
@@ -23,7 +23,7 @@
 		<script>
 			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
 			//- <!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			//- <!-- End Google Tag Manager (noscript) -->
 		</script>
 		<div id="loading-container">
@@ -91,7 +91,8 @@
 						<div class="swiper-wrapper w-100 h-100">
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.1.jpg">
-									<div class="block-content mx-at bg-1" max-width="845px" data-bg-multiply>
+									<div class="block-content mx-at" max-width="845px">
+										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__1.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 class="wow fadeInLeft" font-size="40px" data-wow-delay=".2s">GIÁ TRỊ DỰ ÁN</h2>
@@ -109,7 +110,8 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.2.jpg">
-									<div class="block-content ml-at bg-2" max-width="50%" border-right data-bg-multiply>
+									<div class="block-content ml-at" max-width="50%" border-right>
+										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__2.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Cộng đồng tinh hoa <br>xứng tầm vị thế</h2>
@@ -123,7 +125,8 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.3.jpg">
-									<div class="block-content ml-at bg-3" max-width="50%" border-right data-bg-multiply>
+									<div class="block-content ml-at" max-width="50%" border-right>
+										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__3.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Kiến trúc độc bản<br>cảnh quan hoàn mỹ</h2>
@@ -137,7 +140,8 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.4.jpg">
-									<div class="block-content bg-4" max-width="50%" border-left data-bg-multiply>
+									<div class="block-content" max-width="50%" border-left>
+										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__4.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Tiềm năng đầu tư<br>sinh lời vượt trội</h2>
