--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -23,7 +23,7 @@
 		<script>
 			// Ngoài ra, hãy dán mã này ngay sau thẻ mở <body>:
 			//- <!-- Google Tag Manager (noscript) -->
-			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			//- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			//- <!-- End Google Tag Manager (noscript) -->
 		</script>
 		<div id="loading-container">
