--- a/_dist/index.html
+++ b/_dist/index.html
@@ -26,6 +26,15 @@
 			//- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			//- <!-- End Google Tag Manager (noscript) -->
 		</script>
+		<div id="loading-container">
+			<div class="loading-wrapper">
+				<div id="loading-logo"><img src="./assets/logo.png"></div>
+				<div class="progress">
+					<div id="progress-bar"></div>
+				</div>
+				<div class="progress-status">Loading: <span id="progress-percentage">0</span>%</div>
+			</div>
+		</div>
 		<header>
 			<div class="container h-100"><a class="logo" href="index.html"><img class="lazyload blur-up" data-src="./assets/logo.png" alt="WEST-LAKES"><img class="icon-logo lazyload blur-up" data-src="./assets/icon-logo-new.png" alt="WEST-LAKES"></a>
 				<div class="row no-gutters ai-c h-100">
