--- a/_dist/index.html
+++ b/_dist/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./css/core.min.css">
-		<link rel="stylesheet" href="./css/main.min.css">
+		<link rel="stylesheet" href="./css/main.min.css"><meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com">
 		<script>
 			// Dán mã này trong <head> của trang ở vị trí cao nhất có thể:
 			// <!-- Google Tag Manager -->
@@ -98,16 +98,16 @@
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.1.jpg">
 									<div class="block-content mx-at" max-width="845px">
-										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__1.png" alt=""></div>
+										<div class="img-bg ov-h"><img class="ofcv" src="./assets/images/background/item_index-2__1.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
-												<h2 class="wow fadeInLeft" font-size="40px" data-wow-delay=".2s">GIÁ TRỊ DỰ ÁN</h2>
+												<h2 font-size="40px">GIÁ TRỊ DỰ ÁN</h2>
 											</div>
-											<div class="sub-title wow fadeInLeft" data-wow-delay=".3s">
+											<div class="sub-title">
 												<p>West Lakes Golf & Villass</p>
 												<p>Quần thể biệt thự nghỉ dưỡng ven đô, ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh</p>
 											</div>
-											<div class="desc wow fadeInLeft" data-wow-delay=".4s">
+											<div class="desc">
 												<p>Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.</p>
 											</div>
 										</div>
@@ -117,7 +117,7 @@
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.2.jpg">
 									<div class="block-content ml-at" max-width="50%" border-right>
-										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__2.png" alt=""></div>
+										<div class="img-bg ov-h"><img class="ofcv" src="./assets/images/background/item_index-2__2.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Cộng đồng tinh hoa <br>xứng tầm vị thế</h2>
@@ -132,7 +132,7 @@
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.3.jpg">
 									<div class="block-content ml-at" max-width="50%" border-right>
-										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__3.png" alt=""></div>
+										<div class="img-bg ov-h"><img class="ofcv" src="./assets/images/background/item_index-2__3.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Kiến trúc độc bản<br>cảnh quan hoàn mỹ</h2>
@@ -147,7 +147,7 @@
 							<div class="swiper-slide">
 								<div class="section" data-bg="./assets/images/background/index-2.4.jpg">
 									<div class="block-content" max-width="50%" border-left>
-										<div class="img-bg ov-h"><img class="lazyload ofcv" data-src="./assets/images/background/item_index-2__4.png" alt=""></div>
+										<div class="img-bg ov-h"><img class="ofcv" src="./assets/images/background/item_index-2__4.png" alt=""></div>
 										<div class="content ta-c">
 											<div class="block-title mx-at">
 												<h2 font-size="40px" no-after>Tiềm năng đầu tư<br>sinh lời vượt trội</h2>
