--- a/_dist/news-detail.html
+++ b/_dist/news-detail.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./css/core.min.css">
-		<link rel="stylesheet" href="./css/main.min.css"><meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com">
+		<link rel="stylesheet" href="./css/main.min.css">
 		<script>
 			// Dán mã này trong <head> của trang ở vị trí cao nhất có thể:
 			// <!-- Google Tag Manager -->
