--- a/_dist/index.html
+++ b/_dist/index.html
@@ -891,7 +891,7 @@
 											<input class="form-control" type="text" placeholder="Phone" name="Phone"><span class="field-validate-error">Error</span>
 										</div>
 										<div class="submit">
-											<button data-url="/test" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;gui-bao-gia&gt;,'event_label': &lt;send&gt;,'value': &lt;0&gt;});">gửi</button>
+											<button data-url="/test" onclick="gtag('event', 'click', {'event_category': 'gui-bao-gia','event_label': 'send','value': '0'});">gửi</button>
 										</div>
 									</form>
 								</div>
@@ -903,20 +903,20 @@
 			<div class="index-page" id="js-page-verify" hidden></div>
 		</main>
 		<div class="fixed-menu">
-			<div class="block-item" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;view360&gt;,'event_label': &lt;01&gt;, 'value': &lt;0&gt;});"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
+			<div class="block-item" onclick="gtag('event', 'click', {'event_category': 'view360','event_label': '01','value': '0'});"><a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
 					<div class="item css-selector">
 						<div class="icon"><img src="./assets/icons/view-360.svg" alt="VIEW-360"></div>
 						<div class="text-hover">
 							<h5>VIEW 360<sup>o</sup></h5>
 						</div>
 					</div></a></div>
-			<div class="block-item" type="text" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;nhan-bao-gia&gt;,'event_label': &lt;nhanbaogia&gt;,'value': &lt;0&gt;});">
+			<div class="block-item" type="text" onclick="gtag('event', 'click', {'event_category': 'nhan-bao-gia','event_label': 'nhanbaogia','value': '0'});">
 				<div class="item" data-scroll-to="8">
 					<div class="text">NHẬN BÁO GIÁ</div>
 					<div class="icon"><img src="./assets/icons/quotation.svg" alt="PHONE"></div>
 				</div>
 			</div>
-			<div class="block-item" onclick="gtag('event', &lt;click&gt;, {'event_category': &lt;hotline&gt;,event_label': &lt;goihotline&gt;,'value': &lt;0&gt;});">
+			<div class="block-item" onclick="gtag('event', 'click', {'event_category': 'hotline','event_label': 'goihotline','value': '0'});">
 				<div class="item css-selector"><a href="tel:0938188329">
 						<div class="icon"><img src="./assets/icons/phone.svg" alt="PHONE"></div>
 						<div class="text-hover">
